--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
     <!-- Bootstrap navbar example -->
     <!-- https://www.w3schools.com/bootstrap4/bootstrap_navbar.asp -->
+    <!-- Navbar -->
     <div class="container">
         <nav class="row navbar navbar-expand-lg navbar-light"
             style="border-bottom-left-radius: 8px; border-bottom-right-radius: 8px;">
@@ -69,6 +70,26 @@
             </div>
         </nav>
     </div>
+
+    <!-- Header -->
+    <header class="text-center">
+
+        <h1>
+            Travel, enjoy and live a new
+            <br>
+            and full life
+        </h1>
+
+        <p class="mt-3">
+            Built Wicket longer admire do barton vanity itself do in it.
+            <br>
+            Preferred to sportsmen it engrossed listening.
+            <br>
+            Park gate sell they west hard for the.
+        </p>
+
+        <a href="#" class="btn btn-get-started px-4 mt-4">Get Started</a>
+    </header>
 
     <main></main>
     <footer></footer>
