--- a/index.html
+++ b/index.html
@@ -91,6 +91,32 @@
         <a href="#" class="btn btn-get-started px-4 mt-4">Get Started</a>
     </header>
 
+    <main>
+        <div class="container">
+            <section class="section-stats row justify-content-center" id="stats">
+                <div class="div col-3 col-md-2 stats-detail">
+                    <h2>20K</h2>
+                    <p>Members</p>
+                </div>
+
+                <div class="div col-3 col-md-2 stats-detail">
+                    <h2>25</h2>
+                    <p>Countries</p>
+                </div>
+
+                <div class="div col-3 col-md-2 stats-detail">
+                    <h2>5K</h2>
+                    <p>Hotels</p>
+                </div>
+
+                <div class="div col-3 col-md-2 stats-detail">
+                    <h2>120</h2>
+                    <p>Partners</p>
+                </div>
+            </section>
+        </div>
+    </main>
+
     <main></main>
     <footer></footer>
     <script src="frontend/libraries/retina/retina.js"></script>
