Slicing Popular Destination

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
     <!-- Bootstrap navbar example -->
     <!-- https://www.w3schools.com/bootstrap4/bootstrap_navbar.asp -->
+
     <!-- Navbar -->
     <div class="container">
         <nav class="row navbar navbar-expand-lg navbar-light"
@@ -115,6 +116,75 @@
                 </div>
             </section>
         </div>
+
+        <section class="section-popular" id="popular">
+            <div class="container">
+                <div class="row">
+                    <div class="col text-center section-popular-heading">
+                        <h2>
+                            Popular Destinations
+                        </h2>
+
+                        <p>
+                            Visit our top testinations
+                            <br>
+                            and feel something you never feel before!
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="section-popular-content" id="pupular-content">
+            <div class="container">
+                <div class="section-popular-travel row justify-text-center">
+
+                    <div class="col-sm-6 col-md-4 col-lg-3">
+                        <div class="card-travel text-center d-flex flex-column"
+                            style="background-image: url('/frontend/images/travel-1.jpg') ;">
+                            <div class="travel-country">INDONESIA</div>
+                            <div class="travel-location">DERATAN - BALI</div>
+                            <div class="travel-button mt-auto">
+                                <a href="#" class="btn btn-travel-details px-4">View Details</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-sm-6 col-md-4 col-lg-3">
+                        <div class="card-travel text-center d-flex flex-column"
+                            style="background-image: url('/frontend/images/travel-2.jpg') ;">
+                            <div class="travel-country">INDONESIA</div>
+                            <div class="travel-location">BROMO</div>
+                            <div class="travel-button mt-auto">
+                                <a href="#" class="btn btn-travel-details px-4">View Details</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-sm-6 col-md-4 col-lg-3">
+                        <div class="card-travel text-center d-flex flex-column"
+                            style="background-image: url('/frontend/images/travel-3.jpg') ;">
+                            <div class="travel-country">INDONESIA</div>
+                            <div class="travel-location">NUSA PENIDA</div>
+                            <div class="travel-button mt-auto">
+                                <a href="#" class="btn btn-travel-details px-4">View Details</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-sm-6 col-md-4 col-lg-3">
+                        <div class="card-travel text-center d-flex flex-column"
+                            style="background-image: url('/frontend/images/travel-4.jpg') ;">
+                            <div class="travel-country">MIDDLE EAST</div>
+                            <div class="travel-location">DUBAI</div>
+                            <div class="travel-button mt-auto">
+                                <a href="#" class="btn btn-travel-details px-4">View Details</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <main></main>
