--- a/index.html
+++ b/index.html
@@ -185,6 +185,28 @@
                 </div>
             </div>
         </section>
+
+        <section class="section-networks">
+            <div class="container">
+                <div class="row">
+
+                    <div class="col-md-4">
+                        <h2>Our Networks</h2>
+
+                        <p>
+                            Companies are trusted us
+                            <br>
+                            more than just a trip.
+                        </p>
+                    </div>
+
+                    <div class="col-md-8 text-center">
+                        <img src="/frontend/images/partner.png" alt="Logo Partners" class="img-parter">
+                    </div>
+
+                </div>
+            </div>
+        </section>
     </main>
 
     <main></main>
