--- a/index.html
+++ b/index.html
@@ -207,6 +207,82 @@
                 </div>
             </div>
         </section>
+
+        <section class="section-testimonial-heading" id="testimonialHeading">
+            <div class="container">
+                <div class="row">
+                    <div class="col text-center">
+                        <h2>
+                            Customer Stories
+                        </h2>
+
+                        <p>
+                            Customer satisfaction is our priority.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <div class="section section-testimonial-content" id="testimonialContent">
+            <div class="container">
+                <div class="section-popular-travel row justify-content-center">
+                    <div class="col-sm-6 col-md-6 col-lg-4">
+                        <div class="card card-testimonial text-center">
+                            <div class="testimonial-content">
+                                <img src="/frontend/images/avatar-1.jpg" alt="User" class="rounded-circle">
+
+                                <h3 class="mb-4 mt-3">Jane Curty</h3>
+                                <p class="testimonial">
+                                    "It feels really good to be able to travel with Truevell services."
+                                </p>
+                            </div>
+                            <hr>
+                            <p class="trip-to mt-2">Trip to Nusa Penida</p>
+                        </div>
+                    </div>
+
+                    <div class="col-sm-6 col-md-6 col-lg-4">
+                        <div class="card card-testimonial text-center">
+                            <div class="testimonial-content">
+                                <img src="/frontend/images/avatar-2.jpg" alt="User" class="rounded-circle">
+
+                                <h3 class="mb-4 mt-3">Rapinha</h3>
+                                <p class="testimonial">
+                                    "It is a long established fact that a reader will be distracted by the readable
+                                    content of a page when looking at its layout."
+                                </p>
+                            </div>
+                            <hr>
+                            <p class="trip-to mt-2">Trip to Bromo</p>
+                        </div>
+                    </div>
+
+                    <div class="col-sm-6 col-md-6 col-lg-4">
+                        <div class="card card-testimonial text-center">
+                            <div class="testimonial-content">
+                                <img src="/frontend/images/avatar-3.jpg" alt="User" class="rounded-circle">
+
+                                <h3 class="mb-4 mt-3">Margot Robbie</h3>
+                                <p class="testimonial">
+                                    "Lorem Ipsum is simply dummy text of the printing and typesetting industry."
+                                </p>
+                            </div>
+                            <hr>
+                            <p class="trip-to mt-2">Trip to Nusa Penida</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="container">
+                    <div class="col-12 text-center">
+                        <a href="#" class="btn btn-need-help px-4 mt-4 mx-1">I Need Help</a>
+                        <a href="#" class="btn btn-get-started px-4 mt-4 mx-1">Get Started</a>
+
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
 
     <main></main>
