--- a/index.html
+++ b/index.html
@@ -285,6 +285,70 @@
         </div>
     </main>
 
+    <footer class="section-footer mt-5 mb-4 border-top">
+        <div class="container pt-5 pb-5">
+            <div class="row justify-content-center">
+                <div class="col-12">
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="row">
+                                <div class="col-12 col-lg-3">
+                                    <h5>FEATURES</h5>
+                                    <ul class="list-unstyled">
+                                        <li>
+                                            <a href="#">Reviews</a>
+                                        </li>
+                                        <li>
+                                            <a href="#">Community</a>
+                                        </li>
+                                        <li>
+                                            <a href="#">Social Media Kit</a>
+                                        </li>
+                                        <li>
+                                            <a href="#">Affiliate</a>
+                                        </li>
+                                    </ul>
+                                </div>
+                                <div class="col-12 col-lg-3">
+                                    <h5>ACCOUNT</h5>
+                                    <ul class="list-unstyled">
+                                        <li><a href="#">Refund</a></li>
+                                        <li><a href="#">Security</a></li>
+                                        <li><a href="#">Rewards</a></li>
+                                    </ul>
+                                </div>
+                                <div class="col-12 col-lg-3">
+                                    <h5>COMPANY</h5>
+                                    <ul class="list-unstyled">
+                                        <li><a href="#">Career</a></li>
+                                        <li><a href="#">Help Center</a></li>
+                                        <li><a href="#">Media</a></li>
+                                    </ul>
+                                </div>
+                                <div class="col-12 col-lg-3">
+                                    <h5>Get Connected</h5>
+                                    <ul class="list-unstyled">
+                                        <li>Kulon Progo</li>
+                                        <li>Indonesia</li>
+                                        <li>0831 - 0148 - 7741</li>
+                                        <li>support@truevell.id</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container-fluid">
+            <div class="row border-top justify-content-center align-items-center pt-4">
+                <div class="col-auto text-gray-500 font-weight-light">
+                    2022 Copyright Truevell • All rights reserved • Made in Kulon Progo
+                </div>
+            </div>
+        </div>
+    </footer>
+
     <main></main>
     <footer></footer>
     <script src="frontend/libraries/retina/retina.js"></script>
